<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.list.DetailPOIListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="64dp">

        <ImageView
            android:id="@+id/ivPoiDetailImage"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/image_of_point_of_interest"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_foreground" />

        <View
            android:id="@+id/categoryIndicatorDetail"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPoiDetailImage" />

        <TextView
            android:id="@+id/tvPoiDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/jost_regular"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryIndicatorDetail"
            tools:text="Plaza Mayor" />

        <TextView
            android:id="@+id/tvPoiDetailSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/jost_regular"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPoiDetailTitle"
            tools:text="La Plaza Mayor de Madrid es una plaza rectangular de estilo barroco, ubicada en el centro de Madrid." />

        <ImageButton
            android:contentDescription="@string/postcard_obtained"
            android:id="@+id/btnHint"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_hint_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fabShowOnMap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnARExperience"
            style="@style/Widget.App.Button.3DSlim"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jost_semibold"
            android:paddingVertical="12dp"
            android:text="@string/btn_open_in_ar"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPoiDetailSubtitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnARExperienceRemote"
            style="@style/Widget.App.Button.3DSlim"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jost_semibold"
            android:paddingVertical="12dp"
            android:text="@string/btn_open_in_remote"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnARExperience" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabShowOnMap"
            style="@style/Widget.App.Button.FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/navigate_to_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnARExperienceRemote"
            app:srcCompat="@drawable/ic_location_pin_24dp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvTitleDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/tvTitleDescription"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnHint" />

        <TextView
            android:id="@+id/tvPoiDescription2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/jost_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleDescription"
            tools:text="El “Toboggan”, escrito con dos ges, una de las atracciones destinadas al disfrute público allá por los inicios del siglo XX." />

        <ImageView
            android:id="@+id/ivDescriptionImage"
            android:layout_width="0dp"
            android:layout_height="256dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/tvTitleDescription"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPoiDescription2"
            tools:src="@drawable/img_calle_alcala" />

        <TextView
            android:id="@+id/tvPoiDescription3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jost_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDescriptionImage"
            tools:text="@string/lore_ipsum" />

        <TextView
            android:id="@+id/tvTitleTutorial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/tvTitleTutorial"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPoiDescription3" />

        <TextView
            android:id="@+id/tvTextTutorial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/jost_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleTutorial"
            tools:text="@string/lore_ipsum" />

        <ImageView
            android:id="@+id/ivTutorialImage"
            android:layout_width="0dp"
            android:layout_height="256dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/tvTitleTutorial"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTextTutorial"
            tools:src="@drawable/img_calle_alcala" />

        <TextView
            android:id="@+id/tvLinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/jost_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:text="@string/tvLinks"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivTutorialImage" />

        <TextView
            android:id="@+id/tvTextLinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/jost_regular"
            android:textColor="@color/link"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLinks"
            tools:text="@string/lore_ipsum" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>