<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.proyectomadrid_tfg.view.list.POIListFragment"
        android:label="@string/title_poi_list"
        tools:layout="@layout/fragment_poi_list">

        <action
            android:id="@+id/action_navigation_list_to_navigation_detail_poi"
            app:destination="@id/navigation_detail_poi"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.proyectomadrid_tfg.view.map.CityMapFragment"
        android:label="@string/title_city_map"
        tools:layout="@layout/fragment_city_map">
        <action
            android:id="@+id/action_navigation_map_to_navigation_detail_poi"
            app:destination="@id/navigation_detail_poi"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="pointOfInterestId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_collection"
        android:name="com.example.proyectomadrid_tfg.view.collection.CollectablesFragment"
        android:label="@string/title_collection"
        tools:layout="@layout/fragment_collectables">
        <action
            android:id="@+id/action_navigation_collection_to_navigation_detail_poi"
            app:destination="@id/navigation_detail_poi"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_collection_to_navigation_collection_list"
            app:destination="@id/navigation_collection_list"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail_poi"
        android:name="com.example.proyectomadrid_tfg.view.list.DetailPOIListFragment"
        android:label="fragment_detail_poi_list"
        tools:layout="@layout/fragment_detail_poi_list">
        <argument
            android:name="pointOfInterestId"
            app:argType="integer" />
        <argument
            android:name="fromMap"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/action_navigation_detail_poi_to_navigation_map"
            app:destination="@id/navigation_map"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_map"
            app:popUpToInclusive="false" />
        <argument
            android:name="fromCollection"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="fromPostcard"
            android:defaultValue="false"
            app:argType="boolean" />

    </fragment>
    <fragment
        android:id="@+id/navigation_collection_list"
        android:name="com.example.proyectomadrid_tfg.view.collection.CollectablesListFragment"
        android:label="fragment_collectables_list"
        tools:layout="@layout/fragment_collectables_list">
        <action
            android:id="@+id/action_navigation_collection_list_to_navigation_detail_poi"
            app:destination="@id/navigation_detail_poi"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="collectableListId"
            app:argType="integer" />
    </fragment>
</navigation>